prefix all links with '/testing'

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- custom css -->
-    <link rel="stylesheet" href="/dist/style.min.css" />
-    <link rel="stylesheet" href="/src/fonts/stylesheet.css" />
+    <link rel="stylesheet" href="/testing/dist/style.min.css" />
+    <link rel="stylesheet" href="/testing/src/fonts/stylesheet.css" />
     <title>Kundan Gupta</title>
   </head>
   <body class="body">
     <div id="vs-section" class="vs-section">
       <header class="header">
         <nav class="nav flex flex-jc-sb flex-ai-c">
-          <a href="/" class="nav__logo" title="Kundan">
-            <img src="/src/assets/signature-logo.svg" alt="site-logo" />
+          <a href="/testing" class="nav__logo" title="Kundan">
+            <img src="/testing/src/assets/signature-logo.svg" alt="site-logo" />
           </a>
           <ul class="nav__links flex">
             <li><a href="#works">Works</a></li>
@@ -88,7 +88,10 @@
           </h3>
           <div class="flex flex-wrap flex-jc-sa flex-ai-c">
             <div class="card">
-              <img src="/src/assets/emoji-icons/direct-hit_1f3af.png" alt="" />
+              <img
+                src="/testing/src/assets/emoji-icons/direct-hit_1f3af.png"
+                alt="apple-direct-hit-emoji"
+              />
               <h5 class="subtitle-2 pt-0">Strategy & Direction</h5>
               <p class="caption">
                 Defining the problem, identifying the scope, and eventually,
@@ -97,8 +100,8 @@
             </div>
             <div class="card">
               <img
-                src="/src/assets/emoji-icons/writing-hand_270d-fe0f.png"
-                alt=""
+                src="/testing/src/assets/emoji-icons/writing-hand_270d-fe0f.png"
+                alt="apple-writing-hand-emoji"
               />
               <h5 class="subtitle-2 pt-0">UI/UX Design</h5>
               <p class="caption">
@@ -108,8 +111,8 @@
             </div>
             <div class="card">
               <img
-                src="/src/assets/emoji-icons/man-technologist-light-skin-tone_1f468-1f3fb-200d-1f4bb.png"
-                alt=""
+                src="/testing/src/assets/emoji-icons/man-technologist-light-skin-tone_1f468-1f3fb-200d-1f4bb.png"
+                alt="apple-man-technologist-emoji"
               />
               <h5 class="subtitle-2 pt-0">Product Development</h5>
               <p class="caption">
@@ -140,31 +143,31 @@
           </div>
           <div class="grid">
             <div class="grid__item popular">
-              <img src="/src/assets/portfolio/p1.jpg" />
+              <img src="/testing/src/assets/portfolio/p1.jpg" alt="p1" />
             </div>
             <div class="grid__item grid__item-height2 popular">
-              <img src="/src/assets/portfolio/p2.jpg" />
+              <img src="/testing/src/assets/portfolio/p2.jpg" alt="p2" />
             </div>
             <div class="grid__item latest">
-              <img src="/src/assets/portfolio/p3.jpg" />
+              <img src="/testing/src/assets/portfolio/p3.jpg" alt="p3" />
             </div>
             <div class="grid__item old">
-              <img src="/src/assets/portfolio/p4.jpg" />
+              <img src="/testing/src/assets/portfolio/p4.jpg" alt="p4" />
             </div>
             <div class="grid__item grid__item-height2 latest">
-              <img src="/src/assets/portfolio/p5.jpg" />
+              <img src="/testing/src/assets/portfolio/p5.jpg" alt="p5" />
             </div>
             <div class="grid__item upcoming">
-              <img src="/src/assets/portfolio/p6.jpg" />
+              <img src="/testing/src/assets/portfolio/p6.jpg" alt="p6" />
             </div>
             <div class="grid__item upcoming">
-              <img src="/src/assets/portfolio/p7.jpg" />
+              <img src="/testing/src/assets/portfolio/p7.jpg" alt="p7" />
             </div>
             <div class="grid__item grid__item-height2 popular">
-              <img src="/src/assets/portfolio/p8.jpg" />
+              <img src="/testing/src/assets/portfolio/p8.jpg" alt="p8" />
             </div>
             <div class="grid__item latest">
-              <img src="/src/assets/portfolio/p9.jpg" />
+              <img src="/testing/src/assets/portfolio/p9.jpg" alt="p9" />
             </div>
           </div>
         </div>
@@ -175,7 +178,7 @@
             <div class="flex-wrap">
               <h3>Got a project?</h3>
               <h3>
-                <a href="/" class="link"><u>Let's Talk!</u></a>
+                <a href="/testing" class="link"><u>Let's Talk!</u></a>
               </h3>
             </div>
           </div>
@@ -385,7 +388,7 @@
               A few things
               <span
                 ><img
-                  src="/src/assets/emoji-icons/face-with-rolling-eyes_1f644.png"
+                  src="/testing/src/assets/emoji-icons/face-with-rolling-eyes_1f644.png"
                   alt="apple-emoji-face-with-rolling-eyes" /></span
               ><br />people normally ask me:
             </h3>
@@ -423,7 +426,7 @@
                   collaboration. I'm available for freelance work.
                 </h3>
                 <h3 class="link">
-                  <a href="/"
+                  <a href="/testing"
                     >Let's build your app
                     <span>
                       <svg
@@ -497,11 +500,11 @@
       </main>
     </div>
     <!-- Vendor JS -->
-    <script src="/src/vendor/js/smooth-scroll.min.js"></script>
-    <script defer src="/src/vendor/js/gsap-3.4.0.min.js"></script>
-    <script defer src="/src/vendor/js/isotope-3.0.6.min.js"></script>
+    <script src="/testing/src/vendor/js/smooth-scroll.min.js"></script>
+    <script defer src="/testing/src/vendor/js/gsap-3.4.0.min.js"></script>
+    <script defer src="/testing/src/vendor/js/isotope-3.0.6.min.js"></script>
     <!-- app.js -->
-    <script src="/src/js/index.js"></script>
+    <script src="/testing/src/js/index.js"></script>
     <script>
       let scroll = new Smooth({
         native: false,
