add real projects data

--- a/index.html
+++ b/index.html
@@ -143,31 +143,96 @@
           </div>
           <div class="grid">
             <div class="grid__item popular">
-              <img src="/testing/src/assets/portfolio/p1.jpg" alt="p1" />
+              <figure class="grid__item__thumbnail">
+                <img src="/testing/src/assets/portfolio/smoothies.png" />
+              </figure>
+              <div class="grid__item__details flex flex-jc-sb flex-ai-c">
+                <div class="flex-wrap">
+                  <h6 class="app-name">API Auth</h6>
+                  <p class="caption app-type">Node, Express, JWT & Cookies</p>
+                </div>
+                <a
+                  href="https://github.com/kundanhere/node-express-jwt-auth"
+                  target="_blank"
+                  class="redirect"
+                  title="Source Redirect"
+                ></a>
+              </div>
             </div>
-            <div class="grid__item grid__item-height2 popular">
-              <img src="/testing/src/assets/portfolio/p2.jpg" alt="p2" />
+            <div class="grid__item grid__item-height2 popular old">
+              <figure class="grid__item__thumbnail">
+                <img src="/testing/src/assets/portfolio/sales-app.png" />
+              </figure>
+              <div class="grid__item__details flex flex-jc-sb flex-ai-c">
+                <div class="flex-wrap">
+                  <h6 class="app-name">297 Sales app</h6>
+                  <p class="caption app-type">Android</p>
+                </div>
+                <a
+                  href="https://play.google.com/store/apps/details?id=com.x297"
+                  target="_blank"
+                  class="redirect"
+                  title="Source Redirect"
+                ></a>
+              </div>
             </div>
             <div class="grid__item latest">
-              <img src="/testing/src/assets/portfolio/p3.jpg" alt="p3" />
+              <figure class="grid__item__thumbnail">
+                <img src="/testing/src/assets/portfolio/storybook.png" />
+              </figure>
+              <div class="grid__item__details flex flex-jc-sb flex-ai-c">
+                <div class="flex-wrap">
+                  <h6 class="app-name">Story book</h6>
+                  <p class="caption app-type">Node, Express, Mongo, OAuth</p>
+                </div>
+                <a
+                  href="https://github.com/kundanhere/storybook"
+                  target="_blank"
+                  class="redirect"
+                  title="Source Redirect"
+                ></a>
+              </div>
             </div>
-            <div class="grid__item old">
-              <img src="/testing/src/assets/portfolio/p4.jpg" alt="p4" />
+            <div class="grid__item popular old">
+              <figure class="grid__item__thumbnail">
+                <img src="/testing/src/assets/portfolio/softdoc-music-2.png" />
+              </figure>
+              <div class="grid__item__details flex flex-jc-sb flex-ai-c">
+                <div class="flex-wrap">
+                  <h6 class="app-name">Softdoc Music</h6>
+                  <p class="caption app-type">UWP, Windows 10 app</p>
+                </div>
+                <a
+                  href="https://github.com/kundanhere/SoftdocMusic"
+                  target="_blank"
+                  class="redirect"
+                  title="Source Redirect"
+                ></a>
+              </div>
             </div>
-            <div class="grid__item grid__item-height2 latest">
-              <img src="/testing/src/assets/portfolio/p5.jpg" alt="p5" />
-            </div>
-            <div class="grid__item upcoming">
-              <img src="/testing/src/assets/portfolio/p6.jpg" alt="p6" />
-            </div>
-            <div class="grid__item upcoming">
-              <img src="/testing/src/assets/portfolio/p7.jpg" alt="p7" />
-            </div>
-            <div class="grid__item grid__item-height2 popular">
-              <img src="/testing/src/assets/portfolio/p8.jpg" alt="p8" />
+            <div class="grid__item grid__item-height2 upcoming">
+              <figure class="grid__item__thumbnail">
+                <img src="/testing/src/assets/portfolio/pikmovie.png" />
+              </figure>
+              <div class="grid__item__details flex flex-jc-sb flex-ai-c">
+                <div class="flex-wrap">
+                  <h6 class="app-name">Pikmovie</h6>
+                  <p class="caption app-type">Vue.js app</p>
+                </div>
+                <!-- <a href="#" target="_blank" class="redirect"></a> -->
+              </div>
             </div>
             <div class="grid__item latest">
-              <img src="/testing/src/assets/portfolio/p9.jpg" alt="p9" />
+              <figure class="grid__item__thumbnail">
+                <img src="/testing/src/assets/portfolio/pikmovie-design.png" />
+              </figure>
+              <div class="grid__item__details flex flex-jc-sb flex-ai-c">
+                <div class="flex-wrap">
+                  <h6 class="app-name">Pikmovie</h6>
+                  <p class="caption app-type">Adobe XD Design</p>
+                </div>
+                <!-- <a href="#" target="_blank" class="redirect"></a> -->
+              </div>
             </div>
           </div>
         </div>
